Implements HttpConfig class: -Uses ConfigFile super class to handle basic parsing -Provides further parsing that is specific to httpd.conf files -Provides accessor methods for the supported configuration options

--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -1,6 +1,6 @@
 ServerRoot "/home/rubyserver"
 DocumentRoot "/home/rubyserver/public/"
-port 8999
+Listen 8999
 LogFile "/rubyserver/log.txt"
 ErrorLogFile "/rubyserver/errorlog.txt"
 
