--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -3,5 +3,9 @@ DocumentRoot "/home/rubyserver/public/"
 Listen 8999
 LogFile "/rubyserver/log.txt"
 ErrorLogFile "/rubyserver/errorlog.txt"
+ScriptAlias cgi-bin "/home/rubyserver/public_html/cgi-bin/"
+Alias ~things "/home/rubyserver/things/"
+DirectoryIndex "index.html"
+
 
 
