--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -1,11 +1,10 @@
-ServerRoot "/home/rubyserver"
-DocumentRoot "/home/rubyserver/public_html/"
-Listen 8999
+ServerRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/"
+DocumentRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html"
+Listen 8030
 LogFile "/rubyserver/log.txt"
-ErrorLogFile "/rubyserver/errorlog.txt"
-ScriptAlias cgi-bin "/home/rubyserver/public_html/cgi-bin/"
-Alias ~things "/home/rubyserver/things/"
+ErrorLogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/errorlog.txt"
+ScriptAlias cgi-bin "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
+Alias ~things/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/things/"
 DirectoryIndex "index.html"
-
 
 
