--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -1,7 +1,7 @@
 ServerRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/"
 DocumentRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html"
-Listen 8031
-LogFile "/rubyserver/log.txt"
+Listen 8047
+LogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/log.txt"
 ErrorLogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/errorlog.txt"
 ScriptAlias cgi-bin "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
 Alias ~things/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/things/"
