Bug fixes for HtaccessChecker: -Fixes issue where the HtaccessChecker class did not compare the username passed in by the user to the username in the htpasswd file -Fixes issue where the HtaccessChecker would return false in authorized? if the first credential pair did not match, regardless of other matching pairs -Adds explicit '.htaccess' to httpd.conf for configuration option: 'AccessFileName'

--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -6,5 +6,4 @@ ErrorLogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/errorlog.txt"
 ScriptAlias cgi-bin "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
 Alias ~things/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/things/"
 DirectoryIndex "index.html"
-
-
+AccessFileName ".htaccess"
