--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -3,7 +3,7 @@ DocumentRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html"
 Listen 8094
 LogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/log.txt"
 ErrorLogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/errorlog.txt"
-ScriptAlias cgi-bin "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
+ScriptAlias cgi-bin/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
 Alias ~things/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/things/"
 DirectoryIndex "index.html"
 AccessFileName ".htaccess"
