--- a/rubyserver/config/httpd.conf
+++ b/rubyserver/config/httpd.conf
@@ -1,9 +1,10 @@
-ServerRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/"
-DocumentRoot "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html"
+ServerRoot "/home/luis/Shared/667-web-server/rubyserver/"
+DocumentRoot "/home/luis/Shared/667-web-server/rubyserver/public_html"
 Listen 8094
-LogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/log.txt"
-ErrorLogFile "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/errorlog.txt"
-ScriptAlias cgi-bin/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/public_html/cgi-bin/"
-Alias ~things/ "/home/izaacg/3_5webserver/SFSU_CSC_667/rubyserver/things/"
+LogFile "/home/luis/Shared/667-web-server/rubyserver/log.txt"
+ErrorLogFile "/home/luis/Shared/667-web-server/rubyserver/errorlog.txt"
+ScriptAlias cgi-bin "/home/luis/Shared/667-web-server/rubyserver/public_html/cgi-bin/"
+Alias ~things/ "/home/luis/Shared/667-web-server/rubyserver/things/"
 DirectoryIndex "index.html"
 AccessFileName ".htaccess"
+
